<resources>
    <string name="app_name">FamilyApplication</string>
    <string name="sos">SOS</string>
    <string name="in_case_of_emergency_please_tell_family_members_to_contact_me">In case of emergency,please tell family members to contact me</string>
    <string name="guard">GUARD</string>
    <string name="open_when_you_are_on_a_potentially_dangerous_journey">Open when you are on a potentially dangerous journey</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="Guard">Guard</string>
    <string name="profile">profile</string>
    <string name="Profile">Profile</string>
    <string name="security">Security</string>
    <string name="my_family">My Family</string>
    <string name="calculate">Calculate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>