<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:elevation="50dp"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180"
        android:layout_margin="24dp"
        app:cardBackgroundColor="@color/pink_sos"
        app:cardCornerRadius="16dp"
        app:cardElevation="@dimen/dimen_16"
        app:layout_constraintTop_toTopOf="@id/title" />

    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/dimen_16"
        android:text="@string/sos"
        android:textColor="@color/white_sos"
        android:textSize="@dimen/dimen_24_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />

    <TextView
        android:id="@+id/sos_text"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/dimen_16"
        android:text="@string/in_case_of_emergency_please_tell_family_members_to_contact_me"
        android:textColor="@color/white_sostext"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintEnd_toStartOf="@id/sos_ic"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toBottomOf="@id/text_sos" />

    <ImageView
        android:id="@+id/sos_ic"
        android:layout_width="@dimen/dimen_96"
        android:layout_height="96dp"
        android:layout_margin="16dp"
        android:elevation="@dimen/dimen_16"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/green_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="24dp"
        app:cardBackgroundColor="@color/green_guard"
        app:cardCornerRadius="16dp"
        app:cardElevation="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@id/pink_card" />

    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/dimen_16"
        android:text="@string/guard"
        android:textColor="@color/white_guard"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card" />

    <TextView
        android:id="@+id/guard_textt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/dimen_16"
        android:text="@string/open_when_you_are_on_a_potentially_dangerous_journey"
        android:textColor="@color/white_guardtext"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintEnd_toStartOf="@id/guard_ic"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toBottomOf="@id/text_guard" />

    <ImageView
        android:id="@+id/guard_ic"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="16dp"
        android:elevation="@dimen/dimen_16"
        android:src="@drawable/ic_guard"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card" />


</androidx.constraintlayout.widget.ConstraintLayout>